[FIX] fix little bit spacing

--- a/css/style.css
+++ b/css/style.css
@@ -173,11 +173,11 @@ img{
 #players .players-wrapper{
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 25px;
+  grid-gap: 30px;
 }
 #players .single-player{
   box-shadow: #11111a0d 0px 4px 16px, #11111a0d 0px 8px 32px;
-  padding: 10px;
+  padding: 15px;
 }
 #players .single-player .player-img{
   overflow: hidden;
